# api-utc

./: .env.example  README.md  create_test_user.py  database.py  dependencies.py  empleos_estudiantes_saltillo_monterrey_2025-11-06.csv  main.py  pyproject.toml  requirements.txt  tabla.sql  test_api.py
dao/: __init__.py  cv_dao.py  cv_features_dao.py  empresa_dao.py  postulacion_dao.py  usuario_dao.py  vacante_dao.py  vacantes_features_dao.py
models/: __init__.py  cv.py  empresa.py  features.py  postulacion.py  usuario.py  vacante.py
routers/: __init__.py  auth_router.py  cv_router.py  empresa_router.py  postulacion_router.py  usuario_router.py  vacante_router.py
schemas/: __init__.py  cv.py  empresa.py  postulacion.py  usuario.py  vacante.py
services/: __init__.py  auth_service.py  cv_features_service.py  cv_service.py  empresa_service.py  postulacion_service.py  usuario_service.py  vacante_features_service.py  vacante_service.py
utils/: __init__.py  cv_matcher.py
